# fiori-plus

./: .dockerignore  .env.example  .env.prod.example  .gitignore  DEPLOY.md  Dockerfile  clean_tsv.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_widen_natural_key.py  0003_project_metadata.py  0004_user_auth_fields.py  0005_project_dates.py  0006_import_run_mode.py  0007_header_mappings.py
app/: analytics.py  auth.py  cli.py  config.py  db.py  importer.py  models.py  totp.py  web.py
app/static/favicons/: site.webmanifest
app/templates/: _auth_base.html  _category_expansion.html  _cell_expansion.html  _edit_modal.html  _file_card.html  _files_list.html  _header_mapping.html  _import_analysis.html  _people_cell_expansion.html  _people_results.html  _project_card.html  _runs_table.html  _saved_mapping_badge.html  _transaction_row.html  _transactions_results.html  _upload_confirm.html  _upload_result.html  base.html  change_password.html  enroll_2fa.html  imports.html  login.html  login_2fa.html  people.html  profile.html  project_detail.html  project_settings.html  projects.html  transactions.html
