[project]
name = "fiori-scripts"
version = "0.1.0"
description = "Project financial data importer and viewer"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fiori = "app.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
